deleting unused resource, make update ui in (tab layout for follow and repository user) activity_detail_user.xml, make some adjusment in themes.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorPrimary">#0d47a1</color>
     <color name="colorPrimaryDark">#002171</color>
     <color name="colorSecondary">#00e5ff</color>
+    <color name="colorSecondaryDark">#00b2cc</color>
     <color name="colorShade">#DDDDDD</color>
 </resources>
