--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -1,180 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:colorPrimary"
     tools:context=".ui.detail.DetailUserActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:colorPrimary">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/iv_user"
-            style="@style/Text.White.TitleDetail"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="48dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_username"
-            style="@style/Text.White.TitleDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/iv_user"
-            app:layout_constraintStart_toStartOf="@id/iv_user"
-            app:layout_constraintTop_toBottomOf="@id/iv_user"
-            tools:text="@tools:sample/full_names" />
-
-        <LinearLayout
-            android:id="@+id/layout_detail_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="@+id/tv_username"
-            app:layout_constraintTop_toBottomOf="@+id/tv_username"
-            app:layout_constraintEnd_toEndOf="@+id/tv_username">
-
-            <LinearLayout
-                android:id="@+id/layout_detail_company"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_apartment_24"/>
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_company"
-                    android:layout_gravity="center_vertical"
-                    style="@style/Text.White.SubDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    tools:text="Google"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_detail_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/layout_detail_company"
-                app:layout_constraintTop_toBottomOf="@+id/layout_detail_company"
-                app:layout_constraintEnd_toEndOf="@+id/layout_detail_company">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_location_on_24"/>
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_location"
-                    style="@style/Text.White.SubDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="8dp"
-                    tools:text="Indonesia"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/divider"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/layout_detail_user" />
+            android:background="?android:colorPrimary">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/txt_repository"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/txt_followings"
-            android:text="@string/txt_repository"
-            style="@style/Text.White.TitleDetail" />
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?android:colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_repository"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            app:layout_constraintStart_toStartOf="@id/txt_repository"
-            app:layout_constraintEnd_toEndOf="@+id/txt_repository"
-            app:layout_constraintTop_toBottomOf="@+id/txt_repository"
-            app:layout_constraintBottom_toBottomOf="parent"
-            style="@style/Text.White.SubDetail"
-            tools:text="1234" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/txt_followings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            app:layout_constraintStart_toStartOf="@id/iv_user"
-            app:layout_constraintEnd_toEndOf="@+id/iv_user"
-            android:text="@string/txt_followings"
-            style="@style/Text.White.TitleDetail" />
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/iv_user"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_marginTop="40dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:src="@tools:sample/avatars" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_followings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            app:layout_constraintStart_toStartOf="@+id/txt_followings"
-            app:layout_constraintEnd_toEndOf="@+id/txt_followings"
-            app:layout_constraintTop_toBottomOf="@+id/txt_followings"
-            app:layout_constraintBottom_toBottomOf="parent"
-            style="@style/Text.White.SubDetail"
-            tools:text="1234" />
+                    <ProgressBar
+                        android:id="@+id/pbDetailUser"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_marginTop="40dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/txt_followers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/txt_followings"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            android:text="@string/txt_followers"
-            style="@style/Text.White.TitleDetail" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_username"
+                        style="@style/Text.White.TitleDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        tools:text="@tools:sample/full_names"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_user" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_followers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            app:layout_constraintStart_toStartOf="@+id/txt_followers"
-            app:layout_constraintEnd_toEndOf="@+id/txt_followers"
-            app:layout_constraintTop_toBottomOf="@+id/txt_followers"
-            app:layout_constraintBottom_toBottomOf="parent"
-            style="@style/Text.White.SubDetail"
-            tools:text="1234" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_company"
+                        style="@style/Text.White.SubDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="Google"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_location"
+                        style="@style/Text.White.SubDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="@tools:sample/cities"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_company" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/txt_repo"
+                        style="@style/Text.White.TitleDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="18dp"
+                        android:layout_marginEnd="12dp"
+                        android:text="@string/txt_repository"
+                        app:layout_constraintEnd_toStartOf="@+id/text_followers"
+                        app:layout_constraintHorizontal_bias="0.143"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_repository"
+                        style="@style/Text.White.SubDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        tools:text="@string/txt_200"
+                        app:layout_constraintEnd_toEndOf="@+id/txt_repo"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="@+id/txt_repo"
+                        app:layout_constraintTop_toBottomOf="@+id/txt_repo" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/text_followers"
+                        style="@style/Text.White.TitleDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="18dp"
+                        android:text="@string/txt_followers"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_followers"
+                        style="@style/Text.White.SubDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        tools:text="@string/txt_200"
+                        app:layout_constraintEnd_toEndOf="@+id/text_followers"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="@+id/text_followers"
+                        app:layout_constraintTop_toBottomOf="@+id/text_followers" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/text_followings"
+                        style="@style/Text.White.TitleDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="18dp"
+                        android:text="@string/txt_followings"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.873"
+                        app:layout_constraintStart_toEndOf="@+id/text_followers"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_followings"
+                        style="@style/Text.White.SubDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        tools:text="@string/txt_200"
+                        app:layout_constraintEnd_toEndOf="@+id/text_followings"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="@+id/text_followings"
+                        app:layout_constraintTop_toBottomOf="@+id/text_followings" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/colorOnPrimary"
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tabIndicatorColor="@color/colorSecondary"
+                app:tabSelectedTextColor="@color/colorSecondary"
+                app:tabTextColor="@color/colorSecondary" />
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp_follow_repo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
