--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -61,25 +61,66 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/iv_user" />
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tv_company"
-                        style="@style/Text.White.SubDetail"
+                    <LinearLayout
+                        android:id="@+id/layout_detail_user"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="Google"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />
+                        android:orientation="vertical"
+                        app:layout_constraintStart_toStartOf="@+id/tv_username"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_username"
+                        app:layout_constraintEnd_toEndOf="@+id/tv_username">
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tv_location"
-                        style="@style/Text.White.SubDetail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="@tools:sample/cities"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_company" />
+                        <LinearLayout
+                            android:id="@+id/layout_detail_company"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent">
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_baseline_apartment_24"/>
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/tv_company"
+                                android:layout_gravity="center_vertical"
+                                style="@style/Text.White.SubDetail"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                tools:text="@string/txt_company"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layout_detail_location"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintStart_toStartOf="@+id/layout_detail_company"
+                            app:layout_constraintTop_toBottomOf="@+id/layout_detail_company"
+                            app:layout_constraintEnd_toEndOf="@+id/layout_detail_company">
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_baseline_location_on_24"/>
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/tv_location"
+                                style="@style/Text.White.SubDetail"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="8dp"
+                                tools:text="@string/txt_location"/>
+                        </LinearLayout>
+                    </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/txt_repo"
@@ -93,7 +134,7 @@
                         app:layout_constraintEnd_toStartOf="@+id/text_followers"
                         app:layout_constraintHorizontal_bias="0.143"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+                        app:layout_constraintTop_toBottomOf="@+id/layout_detail_user" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tv_repository"
@@ -116,7 +157,7 @@
                         android:text="@string/txt_followers"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+                        app:layout_constraintTop_toBottomOf="@+id/layout_detail_user" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tv_followers"
@@ -141,7 +182,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.873"
                         app:layout_constraintStart_toEndOf="@+id/text_followers"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+                        app:layout_constraintTop_toBottomOf="@+id/layout_detail_user" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tv_followings"
