Mengubah data yang sebelumnya statik menjadi dinamik menggunakan API serta menerapkan tampilan search untuk mencari user dan menerapkan live data, loading, dan viewmodel

--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -18,6 +18,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
 
+    <ProgressBar
+        android:id="@+id/pb_user"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_username"
         android:layout_width="0dp"
