--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,4 +42,10 @@
         <item name="android:textSize">12sp</item>
         <item name="maxLines">2</item>
     </style>
+
+    <style name="searchText">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
