--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,6 +32,11 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Text.Black.DescItem">
+        <item name="android:fontFamily">@font/poppins_extralight</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <style name="Text.White.TitleDetail">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
