--- a/app/src/main/res/layout/fragment_user_repository.xml
+++ b/app/src/main/res/layout/fragment_user_repository.xml
@@ -33,8 +33,8 @@
         android:id="@+id/pb_user"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginTop="80dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
