--- a/app/src/main/res/layout/fragment_user_repository.xml
+++ b/app/src/main/res/layout/fragment_user_repository.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.detail.UserRepositoryFragment">
+    tools:context=".ui.detail.userrepo.UserRepositoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list_user"
@@ -21,10 +21,10 @@
         android:id="@+id/txt_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:visibility="gone"
         android:text="@string/txt_data_empty"
         style="@style/Text.Black.TittleItemUsername"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
