FIX ketika melakukan aksi menambah lalu menghapus lalu menambah lagi ke favorite sudah work, sebelumnya setelah nambah dan hapus tidak bisa nambah lagi

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorSecondary">#00e5ff</color>
     <color name="colorSecondaryDark">#00b2cc</color>
     <color name="colorShade">#DDDDDD</color>
+    <color name="colorComplement">#a1660d</color>
 </resources>
