--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/favorite"
-        android:icon="@drawable/ic_baseline_favorite_24"
+        android:icon="@drawable/ic_favorite"
         android:title="@string/menu_favorite"
         app:showAsAction="ifRoom|collapseActionView" />
 </menu>
