--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -241,6 +241,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_favorite"
         android:elevation="4dp"
+        app:backgroundTint="@color/colorSecondary"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
