--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -47,7 +47,7 @@
             android:id="@+id/btn_share"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/transparent"
             android:src="@drawable/ic_baseline_share_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
