--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -13,4 +13,10 @@
         android:icon="@drawable/ic_favorite"
         android:title="@string/menu_favorite"
         app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
+        android:id="@+id/setting"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/menu_setting"
+        app:showAsAction="always|collapseActionView" />
 </menu>
